--- a/LiturgicalMusic.WebAPI/src/app/song/views/hymn/hymn-edit.component.html
+++ b/LiturgicalMusic.WebAPI/src/app/song/views/hymn/hymn-edit.component.html
@@ -55,50 +55,12 @@
         </select>
         <span class="help-block" *ngIf="(timeNumerator.touched && timeNumerator.invalid) || (timeDenominator.touched && timeDenominator.invalid)">Obavezno!</span>
     </div>
-    <h2>Orgulje</h2>
-    <div *ngFor="let voice of templateVoices">
-        <div *ngIf="voice.Instrument == 'Orgulje'">
-            <h4>
-                <label class="control-label">
-                    {{ voice.Name }} <input type="checkbox" [checked]="voice.Use" (change)="updateTemplate(voice)"/>
-                </label>
-            </h4>
-            <div *ngIf="voice.Use">
-                <div class="form-group">
-                    <label class="control-label" for="{{voice.ControlNameRelative}}">Relativno</label>
-                    <input class="form-control" type="text" formControlName="{{voice.ControlNameRelative}}" id="{{voice.ControlNameRelative}}" />
-                    <span class="help-block" *ngIf="hasError(voice.ControlNameRelative)">Obavezno!</span>
-                </div>
-                <div class="form-group">
-                    <label class="control-label" for="{{voice.ControlName}}">Note</label>
-                    <textarea class="form-control" cols="10" formControlName="{{voice.ControlName}}" id="{{voice.ControlName}}" rows="5"></textarea>
-                    <span class="help-block" *ngIf="hasError(voice.ControlName)">Obavezno!</span>
-                </div>
-            </div>
-        </div>
-    </div>
+    <h2>Predigra</h2>
+    <instrument-voices [templateVoices]="partsTemplateVoices[0]" [code]="getInstrumentalPartCode('Prelude')"></instrument-voices>
     <h2>Glas</h2>
-    <div *ngFor="let voice of templateVoices">
-        <div *ngIf="voice.Instrument == 'Glas'">
-            <h4>
-                <label class="control-label">
-                    {{ voice.Name }} <input type="checkbox" [checked]="voice.Use" (change)="updateTemplate(voice)" />
-                </label>
-            </h4>
-            <div *ngIf="voice.Use">
-                <div class="form-group">
-                    <label class="control-label" for="{{voice.ControlNameRelative}}">Relativno</label>
-                    <input class="form-control" type="text" formControlName="{{voice.ControlNameRelative}}" id="{{voice.ControlNameRelative}}" />
-                    <span class="help-block" *ngIf="hasError(voice.ControlNameRelative)">Obavezno!</span>
-                </div>
-                <div class="form-group">
-                    <label class="control-label" for="{{voice.ControlName}}">Note</label>
-                    <textarea class="form-control" cols="10" formControlName="{{voice.ControlName}}" id="{{voice.ControlName}}" rows="5"></textarea>
-                    <span class="help-block" *ngIf="hasError(voice.ControlName)">Obavezno!</span>
-                </div>
-            </div>
-        </div>
-    </div>
+    <instrument-voices [templateVoices]="getTemplateVoices('Voice')" [code]="getSongCode()"></instrument-voices>
+    <h2>Orgulje</h2>
+    <instrument-voices [templateVoices]="getTemplateVoices('Organ')" [code]="getSongCode()"></instrument-voices>
     <h2>Tekst</h2>
     <div>
         <div class="form-group" *ngFor="let stanza of lyrics; let i = index" [ngClass]="{'has-error': hasError(stanza.controlName), 'has-success': hasSuccess(stanza.controlName)}">
@@ -113,33 +75,10 @@
             <span class="glyphicon glyphicon-minus"></span> Obriši zadnju
         </button>
     </div>
-    <div *ngIf="chosenVoicesParts.length > 0">
-        <div *ngFor="let part of chosenVoicesParts; let i = index">
-            <div [ngSwitch]="part[0].partName">
-                <h2 *ngSwitchCase="'prelude'">Predigra</h2>
-                <h2 *ngSwitchCase="'interlude'">Međuigra</h2>
-                <h2 *ngSwitchCase="'coda'">Završetak</h2>
-            </div>
-            <div *ngFor="let voice of part">
-                <div [ngSwitch]="voice.voice">
-                    <h3 *ngSwitchCase="'Soprano'">Sopran</h3>
-                    <h3 *ngSwitchCase="'Alto'">Alt</h3>
-                    <h3 *ngSwitchCase="'Tenor'">Tenor</h3>
-                    <h3 *ngSwitchCase="'Bass'">Bas</h3>
-                </div>
-                <div class="form-group" [ngClass]="{'has-error': hasError(voice.controlNameRelative), 'has-success': hasSuccess(voice.controlNameRelative)}">
-                    <label for="{{voice.controlNameRelative}}" class="control-label">Relativno</label>
-                    <input type="text" formControlName="{{voice.controlNameRelative}}" id="{{voice.controlNameRelative}}" class="form-control" />
-                    <span class="help-block" *ngIf="hasError(voice.controlNameRelative)">Obavezno!</span>
-                </div>
-                <div class="form-group" [ngClass]="{'has-error': hasError(voice.controlName), 'has-success': hasSuccess(voice.controlName)}">
-                    <label for="{{voice.controlName}}" class="control-label">Note</label>
-                    <textarea rows="5" cols="10" class="form-control" formControlName="{{voice.controlName}}" id="{{voice.controlName}}"></textarea>
-                    <span class="help-block" *ngIf="hasError(voice.controlName)">Obavezno!</span>
-                </div>
-            </div>
-        </div>
-    </div>
+    <h2>Međuigra</h2>
+    <instrument-voices [templateVoices]="partsTemplateVoices[1]" [code]="getInstrumentalPartCode('Interlude')"></instrument-voices>
+    <h2>Završetak</h2>
+    <instrument-voices [templateVoices]="partsTemplateVoices[2]" [code]="getInstrumentalPartCode('Coda')"></instrument-voices>
     <div *ngIf="preview" style="text-align:center;">
         <embed [src]="domSanitizer.bypassSecurityTrustResourceUrl(pdfFileName)" width="800" height="500" *ngIf="preview && !spinner"/>
     </div>
