--- a/LiturgicalMusic.WebAPI/src/app/song/views/song-edit.component.html
+++ b/LiturgicalMusic.WebAPI/src/app/song/views/song-edit.component.html
@@ -36,56 +36,7 @@
             <option *ngFor="let cmp of composers" [value]="cmp.Id">{{cmp.Name}} {{cmp.Surname}}</option>
         </select>
     </div>
-    <div class="form-group">
-        <fieldset>
-            <legend>Ostali dijelovi</legend>
-            <div class="check-box">
-                <label class="control-label">
-                    <input type="checkbox" (click)="otherPartsCheck(0)" [checked]="otherParts[0]"/> Predigra
-                </label>
-            </div>
-            <div class="check-box">
-                <label class="control-label">
-                    <input type="checkbox" (click)="otherPartsCheck(1)" [checked]="otherParts[1]"/> Međuigra
-                </label>
-            </div>
-            <div class="check-box">
-                <label class="control-label">
-                    <input type="checkbox" (click)="otherPartsCheck(2)" [checked]="otherParts[2]"/> Završetak
-                </label>
-            </div>
-        </fieldset>
-    </div>
-    <div class="form-group" *ngFor="let part of otherParts; let i = index">
-        <fieldset *ngIf="part">
-            <legend [ngSwitch]="partNames[i]">
-                <span *ngSwitchCase="'prelude'">Glasovi za predigru</span>
-                <span *ngSwitchCase="'interlude'">Glasovi za međuigru</span>
-                <span *ngSwitchCase="'coda'">Glasovi za završetak</span>
-            </legend>
-            <div class="check-box">
-                <label class="control-label">
-                    <input type="checkbox" (click)="updatePartTemplate(i, 0)" [checked]="partVoices[i][0]"/> Sopran
-                </label>
-            </div>
-            <div class="check-box">
-                <label class="control-label">
-                    <input type="checkbox" (click)="updatePartTemplate(i, 1)" [checked]="partVoices[i][1]"/> Alt
-                </label>
-            </div>
-            <div class="check-box">
-                <label class="control-label">
-                    <input type="checkbox" (click)="updatePartTemplate(i, 2)" [checked]="partVoices[i][2]"/> Tenor
-                </label>
-            </div>
-            <div class="check-box">
-                <label class="control-label">
-                    <input type="checkbox" (click)="updatePartTemplate(i, 3)" [checked]="partVoices[i][3]"/> Bas
-                </label>
-            </div>
-        </fieldset>
-    </div>
     <div>
-        <button type="submit" class="btn btn-default" [disabled]="songForm.invalid || partsInvalid()">Spremi</button>
+        <button type="submit" class="btn btn-default" [disabled]="songForm.invalid">Spremi</button>
     </div>
 </form>
