--- a/LiturgicalMusic.WebAPI/src/app/song/views/psalm/psalm-edit.component.html
+++ b/LiturgicalMusic.WebAPI/src/app/song/views/psalm/psalm-edit.component.html
@@ -35,33 +35,33 @@
     </div>
 
     <h2>Predigra</h2>
-    <instrument-voices [templateVoices]="partsTemplateVoices[0]"></instrument-voices>
+    <instrument-voices [templateVoices]="partsTemplateVoices[0]" [code]="songCommonService.getInstrumentalPartCode(song, 'Prelude')"></instrument-voices>
 
     <h1>Antifona</h1>
     <h2>Glas</h2>
-    <instrument-voices [templateVoices]="getTemplateVoices('AntiphonaVoice')"></instrument-voices>
+    <instrument-voices [templateVoices]="getTemplateVoices('AntiphonaVoice')" [code]="songCommonService.getSongCode(song)"></instrument-voices>
 
     <h2>Orgulje</h2>
-    <instrument-voices [templateVoices]="getTemplateVoices('AntiphonaOrgan')"></instrument-voices>
+    <instrument-voices [templateVoices]="getTemplateVoices('AntiphonaOrgan')" [code]="songCommonService.getSongCode(song)"></instrument-voices>
     
     <h2>Tekst</h2>
-    <song-lyrics [changeable]="false" [maxStanzas]="1"></song-lyrics>
+    <song-lyrics [changeable]="false" [maxStanzas]="1" [stanzas]="getAntiphonaStanza()"></song-lyrics>
 
     <h1>Psalam</h1>
     <h2>Glas</h2>
-    <instrument-voices [templateVoices]="getTemplateVoices('PsalmVoice')"></instrument-voices>
+    <instrument-voices [templateVoices]="getTemplateVoices('PsalmVoice')" [code]="songCommonService.getSongCode(song)"></instrument-voices>
 
     <h2>Orgulje</h2>
-    <instrument-voices [templateVoices]="getTemplateVoices('PsalmOrgan')"></instrument-voices>
+    <instrument-voices [templateVoices]="getTemplateVoices('PsalmOrgan')" [code]="songCommonService.getSongCode(song)"></instrument-voices>
 
     <h2>Tekst</h2>
-    <song-lyrics></song-lyrics>
+    <song-lyrics [stanzas]="song.Stanzas"></song-lyrics>
 
     <h2>Međuigra</h2>
-    <instrument-voices [templateVoices]="partsTemplateVoices[1]"></instrument-voices>
+    <instrument-voices [templateVoices]="partsTemplateVoices[1]" [code]="songCommonService.getInstrumentalPartCode(song, 'Interlude')"></instrument-voices>
 
     <h2>Završetak</h2>
-    <instrument-voices [templateVoices]="partsTemplateVoices[2]"></instrument-voices>
+    <instrument-voices [templateVoices]="partsTemplateVoices[2]" [code]="songCommonService.getInstrumentalPartCode(song, 'Coda')"></instrument-voices>
 
     <div *ngIf="preview" style="text-align:center;">
         <embed [src]="domSanitizer.bypassSecurityTrustResourceUrl(pdfFileName)" width="800" height="500" *ngIf="preview && !spinner" />
