--- a/LiturgicalMusic.Angular/src/app/song/views/hymn/hymn-edit.component.html
+++ b/LiturgicalMusic.Angular/src/app/song/views/hymn/hymn-edit.component.html
@@ -1,83 +1,28 @@
-﻿<form autocomplete="off" [formGroup]="voiceForm" (ngSubmit)="createUpdateSong(voiceForm.value)" novalidate>
-    <div class="form-group" [ngClass]="{'has-error': key.touched && key.invalid, 'has-success': key.value!=null && key.valid}">
-        <label class="control-label" for="Key">Tonalitet</label>
-        <select class="form-control" formControlName="Key" id="Key">
-            <option value="ces \major">Ces dur</option>
-            <option value="c \major">C dur</option>
-            <option value="cis \major">Cis dur</option>
-            <option value="des \major">Des dur</option>
-            <option value="d \major">D dur</option>
-            <option value="es \major">Es dur</option>
-            <option value="e \major">E dur</option>
-            <option value="f \major">F dur</option>
-            <option value="fis \major">Fis dur</option>
-            <option value="ges \major">Ges dur</option>
-            <option value="g \major">G dur</option>
-            <option value="aes \major">As dur</option>
-            <option value="a \major">A dur</option>
-            <option value="bes \major">B dur</option>
-            <option value="b \major">H dur</option>
-            <option value="c \minor">c mol</option>
-            <option value="cis \minor">cis mol</option>
-            <option value="d \minor">d mol</option>
-            <option value="dis \minor">dis mol</option>
-            <option value="es \minor">es mol</option>
-            <option value="e \minor">e mol</option>
-            <option value="f \minor">f mol</option>
-            <option value="fis \minor">fis mol</option>
-            <option value="g \minor">g mol</option>
-            <option value="gis \minor">gis mol</option>
-            <option value="a \minor">a mol</option>
-            <option value="bes \minor">b mol</option>
-            <option value="b \minor">h mol</option>
-        </select>
-        <span class="help-block" *ngIf="key.touched && key.invalid">Obavezno!</span>
-    </div>
-    <div class="form-group" [ngClass]="{'has-error': (timeNumerator.touched && timeNumerator.invalid) || (timeDenominator.touched && timeDenominator.invalid), 'has-success': (timeNumerator.value!=null && timeNumerator.valid && timeDenominator.value!=null && timeDenominator.valid)}">
-        <label class="control-label">Mjera</label>
-        <select class="form-control" formControlName="timeNumerator">
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
-        </select>/
-        <select class="form-control" formControlName="timeDenominator">
-            <option value="2">2</option>
-            <option value="4">4</option>
-            <option value="8">8</option>
-        </select>
-        <span class="help-block" *ngIf="(timeNumerator.touched && timeNumerator.invalid) || (timeDenominator.touched && timeDenominator.invalid)">Obavezno!</span>
-    </div>
+﻿<div>
+    <key-time [existingKey]="key" [existingTimeNumerator]="timeNumerator" [existingTimeDenominator]="timeDenominator"></key-time>
 
     <h2>Predigra</h2>
-    <instrument-voices [templateVoices]="partsTemplateVoices[0]" [code]="songCommonService.getInstrumentalPartCode(song, 'Prelude')"></instrument-voices>
+    <instrument-voices [templateVoices]="partsTemplateVoices[0]" [code]="songCommonService.getInstrumentalPartCode(songSessionService.song, 'Prelude')"></instrument-voices>
 
     <h2>Glas</h2>
-    <instrument-voices [templateVoices]="getTemplateVoices('Voice')" [code]="songCommonService.getSongCode(song)"></instrument-voices>
+    <instrument-voices [templateVoices]="getTemplateVoices('Voice')" [code]="songCommonService.getSongCode(songSessionService.song)"></instrument-voices>
 
     <h2>Orgulje</h2>
-    <instrument-voices [templateVoices]="getTemplateVoices('Organ')" [code]="songCommonService.getSongCode(song)"></instrument-voices>
+    <instrument-voices [templateVoices]="getTemplateVoices('Organ')" [code]="songCommonService.getSongCode(songSessionService.song)"></instrument-voices>
 
     <h2>Tekst</h2>
-    <song-lyrics [stanzas]="song.Stanzas"></song-lyrics>
+    <song-lyrics [stanzas]="songSessionService.song.Stanzas"></song-lyrics>
 
     <h2>Međuigra</h2>
-    <instrument-voices [templateVoices]="partsTemplateVoices[1]" [code]="songCommonService.getInstrumentalPartCode(song, 'Interlude')"></instrument-voices>
+    <instrument-voices [templateVoices]="partsTemplateVoices[1]" [code]="songCommonService.getInstrumentalPartCode(songSessionService.song, 'Interlude')"></instrument-voices>
 
     <h2>Završetak</h2>
-    <instrument-voices [templateVoices]="partsTemplateVoices[2]" [code]="songCommonService.getInstrumentalPartCode(song, 'Coda')"></instrument-voices>
+    <instrument-voices [templateVoices]="partsTemplateVoices[2]" [code]="songCommonService.getInstrumentalPartCode(songSessionService.song, 'Coda')"></instrument-voices>
 
     <div *ngIf="preview" style="text-align:center;">
         <embed [src]="domSanitizer.bypassSecurityTrustResourceUrl(pdfFileName)" width="800" height="500" *ngIf="preview && !spinner"/>
     </div>
-    <button type="button" class="btn btn-default" (click)="previewSong(voiceForm.value)" [disabled]="previewEnabled() || spinner">Pregledaj</button>
-    <button type="submit" class="btn btn-default" [disabled]="voiceForm.invalid || spinner || voicesInvalid()">Spremi</button>
+    <button type="button" class="btn btn-default" (click)="previewSong()" [disabled]="keyTime.previewEnabled() || spinner">Pregledaj</button>
+    <button type="button" class="btn btn-default" (click)="createUpdateSong()" [disabled]="keyTime.previewEnabled() || spinner || voicesInvalid()">Spremi</button>
     <img src="app/assets/image/spinner.gif" style="width:100px;" *ngIf="spinner"/>
-</form>
+</div>
